# langwich

./: .gitignore  README.md  __init__.py  cli.py  deploy.sh  pyproject.toml  requirements-dev.txt  requirements.txt
core/: rules_manager.py
data/: languages.json
data/rules/: english.json  japanese.json
langs/: ua_en.json
tests/: test_cli.py  test_rules_manager.py  utils.py
tests/data/: metadata.json
tools/: frequents.py  metadata_fields.py
